Dto's prepared & model classes -upgraded